...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    style="?android:textAppearanceSmall"
                    android:layout_width="147dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:text="Direction"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button3"
                    style="?android:textAppearanceSmall"
                    android:layout_width="138dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="bottom|center"
                    android:text="Buy ticket"
...
